[gd_scene load_steps=6 format=3 uid="uid://c7ahiji6itgu0"]

[ext_resource type="Texture2D" uid="uid://c3ytjpdrg488o" path="res://Sprites/coin.png" id="1_2qo34"]
[ext_resource type="PhysicsMaterial" uid="uid://bmrcwa6hn5p8m" path="res://physicsmat.tres" id="1_g537i"]
[ext_resource type="Script" uid="uid://ctb0fvi6g4y6l" path="res://Scripts/coin.gd" id="1_jgi06"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jgi06"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2qo34"]
radius = 3.0

[node name="Coin" type="RigidBody2D"]
collision_layer = 32
collision_mask = 5
physics_material_override = ExtResource("1_g537i")
script = ExtResource("1_jgi06")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_2qo34")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jgi06")

[node name="PickUp" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUp"]
shape = SubResource("CircleShape2D_2qo34")

[node name="Timer" type="Timer" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]

[connection signal="body_entered" from="PickUp" to="." method="_on_pick_up_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
